--- a/data/app_download.json
+++ b/data/app_download.json
@@ -1,6 +1,6 @@
 {
   "timestamp": 1631170840,
-  "AppDownloadInfo": [{
+  "downloadInfo": [{
     "app_id": 420729,
     "num": 100,
     "timestamp": 1631170840
